# multicastpy

./: README.md  RELEASING.md  setup.cfg
src/multicastpy/: __main__.py  dataset.py  eaf.py  html.py  metadata.py  refind.py  repos.py  tex.py  util.py  xml.py
src/multicastpy/commands/: cldfbench.py  download.py  makecldf.py  pushtag.py
src/multicastpy/data/: sources.bib
tests/: conftest.py  test_cli.py  test_dataset.py  test_eaf.py  test_html.py  test_metadata.py  test_refind.py  test_repos.py  test_tex.py  test_util.py  test_xml.py
tests/fixtures/: index.html
tests/fixtures/data/2311/mandarin/eaf/: mc_mandarin_hml.eaf
tests/fixtures/data/2311/veraa/tsv/: mc_veraa_isam.tsv
tests/fixtures/data/2311/veraa/xml/: mc_veraa_isam.xml
tests/fixtures/data/2401/veraa/eaf/: mc_veraa_isam.eaf
tests/fixtures/data/docs/citations/: mc_veraa_citation.txt
tests/fixtures/data/docs/corpora/list-of-referents/veraa/tsv/: mc_veraa_list-of-referents.tsv
tests/fixtures/data/docs/general/metadata/: 2311__mc_metadata.tsv
tests/fixtures/data/docs/tex/docs/collection-overview/sections/: corpora.tex
